NMCMS-427 - Fixed extra space 10 points under a picture caption.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@28429 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/natmm/templates/natmm/hoofdsite/themas/main.css
+++ b/contributions/natmm/templates/natmm/hoofdsite/themas/main.css
@@ -60,6 +60,7 @@ form {
 }
 .imagecaption{
 	color: #a0a0a0;
+	padding-bottom:10;
 }
 .dotline {
    width: 100%;
